@@ -1,8 +1,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Bioinformatics Toolkit | 
-		v0.5.0
+	<title>Bioinformatics Toolkit |
+		v0.5.1
 	</title>
 	<script src="static/js/tongji.js"></script>
 
@@ -10,7 +10,7 @@
 	.wrap{width:1000px;margin:0 auto; }
 	a{color:#FF0097;text-decoration: none}
 	a:hover{text-decoration:underline}
-	
+
 	a.grey{color:grey;}
 
 	ul{border:1px dashed #ccc; padding:10px; margin:10px; list-style:none;}
@@ -32,62 +32,74 @@
 
 <div class=wrap>
 	<img src="/images/tool_logo.png" style="float:left; margin-right:10px;" />
-	<h1>bioToolKit <span class="light smaller"> 
-		<br />Bioinformatics Toolkit: R/Python3/shell/js/C/C++  
+	<h1>bioToolKit <span class="light smaller">
+		<br />Bioinformatics Toolkit: R/Python3/shell/js/C/C++
 		<br />QQ group: 187923577</span></h1>
 
 
-	
-	
+
+
 	<ul><h2>Tools</h2>
-		<h3>Web Tools<span class=light> Powered by Javascript.</span></h3>
+		<h3>Web Tools<span class=light> Powered by JavaScript.</span></h3>
 		<li><a href="http://www.biomooc.com/index2.html">Navigator</a> Short cuts for bioinformatics.</li>
 		<li><a href="tool/transphage.html">TransPhage</a> A tool for Translating peptide from phage display[Ph.Dc7c,Ph.D7,Ph.D12].</li>
 		<li><a href="tool/revCom.html">revCom</a> A tool for DNA translation, reverse complement.</li>
-		
+
 		<li><a href="JavaScript/mathJax_demo.html">LaTeX Math Preview</a> to preview LaTeX Math expression, based on MathJax.js</li>
+		
+		
+		<b>Local server:</b>
 		<li><a href="JavaScript/code_reader.html">Code Reader</a> to preview R or Python code on server with some highlight by prism.js.</li>
+		<li><a href="JavaScript/markdownReader/index_md.html">Markdown Reader</a> to view Markdown files using js only.</li>
 
 
 		<h3>Linux Tools</h3>
 		<li><a target="_blank" href="http://www.biomooc.com/linux/docker-tutorial.html">Docker images</a> of Rstudio with Seurat, Monocle, ...</li>
 	</ul>
 
-	
-	
-	
-	
-	
+
+
+
+
+
+
+
+
+
 	<ul><h2>Blog System</h2>
-		<li><a target="_blank" href="https://github.com/miostudio/txtBlog.py">txtBlog.py</a> for txt files at localhost <span class=light>Powered by Python3.6</span></li>
+		<li><a target="_blank" href="https://github.com/BioMooc/txtBlog.py">txtBlog.py</a> for txt files at localhost <span class=light>Powered by Python3.6</span></li>
 		<li><a target="_blank" href="https://github.com/DawnEve/StackNote">StackNote</a> for markdown files at localhost <span class=light>Powered by JavaScript/Vue3</span></li>
 	<!--
 		<li><a href="http://agetouch.blog.163.com/">ageTouch</a> My bioinfo blog.</li>
 		<li><a href="http://tigomall.blog.163.com/">tigoMall</a> My experi blog.</li>
 		-->
 	</ul>
-	
-	
-	
+
+
+
+
+
+
+
 	<ul><h2>Data</h2>
 		<li><a href="tool/TF_list.txt">TF_list.txt</a> All TF gene names up to now.</li>
 		<li><a href="https://www.gsea-msigdb.org/gsea/msigdb/collections.jsp">MSigDB Collections</a> The 25724 gene sets in the Molecular Signatures Database (MSigDB) are divided into 8 major collections, and several sub-collections.</li>
 		<hr>
-		<li>Impact factor: 
-			<a href="/IF/IF_2020-high.html">2020-high</a> 
-				(<a href="/IF/backup/IF_2020.html">2020_all</a>) | 
-			<a href="/IF/JournalHomeGrid-IF2019-sim.csv">2019 csv</a> 
+		<li>Impact factor:
+			<a href="/IF/IF_2020-high.html">2020-high</a>
+				(<a href="/IF/backup/IF_2020.html">2020_all</a>) |
+			<a href="/IF/JournalHomeGrid-IF2019-sim.csv">2019 csv</a>
 				(<a href="/IF/backup/IF_2019.html">2019</a>) |
 		</li>
-	</ul>	
-	
-	
-	
+	</ul>
+
+
+
 	<ul><h2>Visualization</h2>
 		<p class=light>R, ggplot2; matplotlib, seaborn, js, </p>
 		<li><a href="http://www.biomooc.com/R/R-draw-adv-ggplot2.html">learn ggplot2</a></li>
 		<br>
-		
+
 		<b>Fancy pictures driven by data: </b><br>
 		<ol>
 			<li><a href="R_scripts/index.html">专题：ggplot2画paper中常见的图</a></li>
@@ -95,8 +107,8 @@
 			<li><a href="JavaScript/index.html">专题：JavaScript画paper中常见的图</a></li>
 		</ol>
 	</ul>
-	
-	
+
+
 	<div class="footer light">
 		JimmyMall at 163 dot com | Fork me on <a class=grey href="https://github.com/DawnEve/bioToolKit">Github</a>
 	</div>
