@@ -101,6 +101,7 @@ v0.1.3 添加本地url
 		py/ Louvain
 	dev0.4.9 R/ update 雷达图, 发公众号 [2022.11.9]
 	dev0.5.0 js/ code reader add to index.html [2022.11.18]
+	dev0.5.1 add to index.html: js/ markdown reader [2022.11.18]
 ##==> commit
 ##=====> git push DawnEve
 
